# finsight-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_setup.py
data/parquet/: raw_invoices.parquet
data_ingestion/: ingestion_models.py  ingestion_processor.py
metadata/: vendors.json
schemas/: models.py
tools/: metadata_lookup.py
